--- a/package.json
+++ b/package.json
@@ -2,11 +2,22 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "yuqueConfig": {
+    "postPath": "source/_posts/yuque",
+    "cachePath": "yuque.json",
+    "mdNameFormat": "title",
+    "adapter": "hexo",
+    "concurrency": 5,
+    "baseUrl": "https://www.yuque.com/api/v2",
+    "login": "yinzhi",
+    "repo": "blog",
+    "onlyPublished": false
+  },
   "scripts": {
-    "build": "hexo generate",
-    "clean": "hexo clean",
-    "deploy": "hexo deploy",
-    "server": "hexo server"
+    "sync": "yuque-hexo sync",
+    "clean:yuque": "yuque-hexo clean",
+    "deploy": "npm run sync && hexo clean && hexo g -d",
+    "dev": "hexo clean && hexo server"
   },
   "hexo": {
     "version": "4.0.0"
@@ -21,5 +32,8 @@
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-server": "^1.0.0"
+  },
+  "devDependencies": {
+    "yuque-hexo": "^1.6.2"
   }
 }
