--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "adapter": "hexo",
     "concurrency": 5,
     "baseUrl": "https://www.yuque.com/api/v2",
-    "login": "yinzhi",
+    "login": "cajan",
     "repo": "blog",
     "onlyPublished": false
   },
